# Face-Segmentation

./: rqr.txt
rpcats/: main.py  pyproject.toml
rpcats/Data/: CelebAMaskDataset.py  visualize_batch.py
rpcats/Model/: U_net.py
rpcats/Model/components/: DoubleConv.py
rpcats/Model/components/coding/: Encoder.py
rpcats/Model/components/decoding/: Decoder.py
